--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
         </div>
     </footer>
 
+    <button id="scrollToTopBtn" title="Retour en haut">↑</button>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Marked.js pour le parsing Markdown -->
