--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Old+Standard+TT:wght@400;700&family=Overpass:wght@300;400;600;700&display=swap"
         rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Feuille de style personnalisée -->
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -29,6 +31,7 @@
                         <li class="nav-item"><a class="nav-link" href="#qui-sommes-nous">Qui sommes-nous</a></li>
                         <li class="nav-item"><a class="nav-link" href="#les-enjeux">Les enjeux</a></li>
                         <li class="nav-item"><a class="nav-link" href="#ils-en-parlent">Ils en parlent</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#screenshot">Screenshot</a></li>
                         <li class="nav-item"><a class="nav-link" href="#telecharger">Télécharger</a></li>
                     </ul>
                 </div>
@@ -238,6 +241,25 @@
             </div>
         </section>
 
+        <!-- Section Screenshot -->
+        <section id="screenshot" class="py-5">
+            <div class="container">
+                <h2 class="text-center mb-5">Screenshot</h2>
+                <div class="row">
+                    <div class="col-md-6 mb-4">
+                        <div class="screenshot-container">
+                            <img src="./images/capture1.png" alt="Screenshot 1" class="img-fluid rounded shadow">
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                        <div class="screenshot-container">
+                            <img src="./images/capture2.png" alt="Screenshot 2" class="img-fluid rounded shadow">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="telecharger" class="mb-5">
             <div class="row">
                 <div class="col-md-4 d-flex align-items-center">
@@ -268,6 +290,20 @@
 
     <footer class="bg-dark text-white py-4 mt-5">
         <div class="container text-center">
+            <div class="social-links mb-3">
+                <a href="https://github.com/GillesR76" target="_blank" class="github-link">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://github.com/mistWil" target="_blank" class="github-link">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/gilles-richard-710409168/" target="_blank" class="linkedin-link">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/wilfried-leroulier-ba63ab237/" target="_blank" class="linkedin-link">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </div>
             <p>&copy; 2024 Protect Yourself. Tous droits réservés.</p>
         </div>
     </footer>
